--- a/package.json
+++ b/package.json
@@ -1,26 +1,48 @@
 {
-  "name": "my-app",
+  "name": "inventory-manager",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.0.2",
+    "@electron/remote": "^2.0.8",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.0",
+    "electron-is-dev": "^2.0.0",
     "framer-motion": "^6.2.9",
+    "path-browserify": "^1.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^3.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^0.2.2"
   },
+  "main": "public/main.js",
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron:serve": "concurrently -k \"cross-env BROWSER=none yarn start\" \"yarn electron:start\"",
+    "electron:build": "yarn build && electron-builder -c.extraMetadata.main=build/main.js",
+    "electron:start": "wait-on tcp:3000 && electron ."
+  },
+  "build": {
+    "productName" : "Inventory Manager",
+    "extends": null,
+    "appId": "inventory.manager",
+    "files": [
+      "dist/**/*",
+      "build/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "nsis": {
+      "uninstallDisplayName": "Inventory Manager"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +58,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^7.2.1",
+    "cross-env": "^7.0.3",
+    "electron": "^19.0.1",
+    "electron-builder": "^23.0.3",
+    "wait-on": "^6.0.1"
   }
 }
